filebrowser/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
    - protocol: TCP
      port: 8080
      name: http
