filebrowser/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: filebrowser-proxy
  name: filebrowser-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser-proxy
  template:
    metadata:
      labels:
        app: filebrowser-proxy
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - filebrowser
              topologyKey: kubernetes.io/hostname
      containers:
        - image: quay.io/oauth2-proxy/oauth2-proxy
          args:
          - --provider=keycloak-oidc
          - --redirect-url=https://files.local.ongy.net/oauth2/callback
          - --oidc-issuer-url=https://keycloak.local.ongy.net/realms/local.ongy.net
          - --code-challenge-method=S256
          - --reverse-proxy=true
          - --http-address=0.0.0.0:8080
          - --upstream=http://filebrowser:8080
          - --email-domain=*

          - --skip-provider-button=true
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 1000
            privileged: false
          name: oauth-proxy
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: filebrowser-proxy
spec:
  podSelector:
    matchLabels:
      app: filebrowser-proxy
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.128.2/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app: filebrowser
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: filebrowser-proxy
spec:
  endpointSelector:
    matchLabels:
      app: filebrowser-proxy
  ingress:
    - fromEntities:
        - ingress
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-proxy
spec:
  selector:
    app: filebrowser-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
